# pytrait

./: README.md  setup.cfg
tests/: test_error.py  test_trait.py
trait/: __init__.py  hub.py  trait.py
