[metadata]
name = pytrait
version = 0.1.0
author = uv0xab
author_email = liyi.fm@foxmail.com
description = trait extension for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uv0xab/pytrait
classifiers =
    Programming Lanaguage :: Python :: 3
    Programming Lanaguage :: Python :: 3.6
    Operating System :: OS Independent

[options]
package_dir =

packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
